--- a/package.json
+++ b/package.json
@@ -30,16 +30,21 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "3.9.0",
+    "enzyme-adapter-react-16": "1.11.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
+    "node-sass": "npm:sass",
     "react-test-renderer": "^16.8.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "svg-sprite-loader": "^5.1.1",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
-    "svg-sprite-loader": "^5.1.1"
-
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
     "react": "^16.8.4",
