--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-test-renderer": "^16.8.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
+    "babel-preset-react-app": "^10.0.0",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "3.9.0",
