--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme-adapter-react-16": "^1.15.5",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "node-sass": "npm:sass",
