--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,7 @@ workflows:
       - publish:
           requires:
             - build
+            # 忽略分支 只看tag
           filters:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*/
