--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.js"
+    "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
     "babel-preset-react-app": "^10.0.0",
-    "cross-env": "^5.2.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^2.1.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.15.5",
