--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.3.1",
     "babel-preset-react-app": "^10.0.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^5.0.0"
   }
 }
