--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^2.1.1",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "jest-junit": "6.3.0",
