--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "jest": "^24.3.1",
     "jest-junit": "6.3.0",
     "node-sass": "npm:sass",
+    "prism-react-renderer": "^1.1.1",
+    "raw-loader": "^4.0.2",
     "react-test-renderer": "^16.8.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
