--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "dist/lib/index",
   "types": "dist/lib/index",
   "scripts": {
+    "doc": "cross-env NODE_ENV=production webpack --config webpack.config.doc.js",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
