--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "jest-junit": "6.3.0",
-    "node-sass": "npm:sass",
+    "node-sass": "npm:sass@^1.59.3",
     "prism-react-renderer": "^1.1.1",
     "raw-loader": "^4.0.2",
     "react-test-renderer": "^16.8.4",
@@ -57,8 +57,10 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "tslib": "^2.5.0"
   }
 }
