--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "main": "dist/lib/index",
   "types": "dist/lib/index",
   "scripts": {
+    "dev": "vite",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
+    "preview": "vite preview",
     "doc": "cross-env NODE_ENV=production webpack --config webpack.config.doc.js",
     "test": "cross-env NODE_ENV=test jest --config=jest.config.js --runInBand",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
     "ci": "cross-env NODE_ENV=test JEST_JUNIT_OUTPUT=./test-results/jest/results.xml jest --config=jest.config.ci.js"
   },
   "repository": {
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/jest": "^24.0.9",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
@@ -40,27 +43,28 @@
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.3.1",
     "jest-junit": "6.3.0",
-    "node-sass": "npm:sass@^1.59.3",
     "prism-react-renderer": "^1.1.1",
     "raw-loader": "^4.0.2",
     "react-test-renderer": "^16.8.4",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "svg-sprite-loader": "^5.1.1",
+    "sass": "^1.59.3",
     "ts-jest": "^24.0.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "vite-plugin-raw": "^1.0.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "jsx-dev-runtime@latest": "link:@emotion/react/jsx-dev-runtime@latest",
     "prop-types": "^15.8.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^5.0.0",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
   }
 }
