--- a/package.json
+++ b/package.json
@@ -28,17 +28,16 @@
   },
   "homepage": "https://github.com/AC-greener/react-wheels#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.9",
-    "@types/react-test-renderer": "^16.8.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "babel-preset-react-app": "^10.0.1",
     "cross-env": "^5.2.0",
-    "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "jest": "^24.3.1",
-    "jest-junit": "6.3.0",
+    "jest": "^29.5.0",
     "prism-react-renderer": "^1.1.1",
-    "react-test-renderer": "^16.8.4",
     "sass": "^1.59.3",
-    "ts-jest": "^24.0.0",
+    "ts-jest": "^29.0.5",
     "vite-plugin-raw": "^1.0.3"
   },
   "dependencies": {
