--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-react-app": "^10.0.1",
     "cross-env": "^5.2.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prism-react-renderer": "^1.1.1",
     "sass": "^1.59.3",
     "ts-jest": "^29.0.5",
